<?xml version="1.0"?>
<package format="2">
  <name>path_searching</name>
  <version>1.2.0</version>
  <description>
    The path_searching package
  </description>
  <author email="bzhouai@todo.todo">bzhouai</author>
  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>plan_env</depend>
  <depend>sdf_tools</depend>

  <export>
  </export>
</package>
